buildscript {
    repositories {
        maven { url "https://plugins.gradle.org/m2/" }
        mavenCentral()
    }
}

plugins {
    id 'java-library'
}

group = 'org.sv'

subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'idea'
    group = 'org.sv'

    configurations {
        mockitoAgent { transitive = false }
    }

    java {
        sourceCompatibility = '17'
        targetCompatibility = '17'
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        api 'org.apache.httpcomponents:httpclient:4.5.14'

        api group: 'io.github.classgraph', name: 'classgraph', version:'4.8.180'
        api group: 'com.github.luben', name: 'zstd-jni', version: '1.5.6-7'
        api group: 'com.google.code.gson', name: 'gson', version: '2.10.1'

        api group: 'org.apache.commons', name: 'commons-lang3', version: '3.17.0'
        api group: 'commons-codec', name: 'commons-codec', version: '1.17.1'
        api group: 'commons-io', name: 'commons-io', version: '2.17.0'
        api group: 'commons-net', name: 'commons-net', version: '3.11.1'
        api group: 'commons-cli', name: 'commons-cli', version: '1.9.0'
        api group: 'org.apache.commons', name: 'commons-text', version: '1.12.0'
        api group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.12.0'
        api group: 'org.apache.commons', name:'commons-csv', version: '1.14.0'

        api group: 'org.ow2.asm', name: 'asm', version:'9.8'

        api group: 'org.apache.logging.log4j', name: 'log4j-core', version: "${log4jVersion}"
        api group: 'org.apache.logging.log4j', name: 'log4j-api', version: "${log4jVersion}"

        api group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: "${jacksonVersion}"
        api group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "${jacksonVersion}"
        api group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: "${jacksonVersion}"
        api group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: "${jacksonVersion}"
        api group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-smile', version: "${jacksonVersion}"
        api group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-cbor', version: "${jacksonVersion}"
        api group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-protobuf', version: "${jacksonVersion}"
        api group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-toml', version: "${jacksonVersion}"

        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.0'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
        testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.14.2'
        mockitoAgent 'org.mockito:mockito-core:5.14.2'
    }
    test {
        useJUnitPlatform()
        jvmArgs += [
                "--add-opens=java.base/java.lang=ALL-UNNAMED",
                "--add-opens=java.base/java.util=ALL-UNNAMED",
                "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
                "-Dnet.bytebuddy.experimental=true",
                "-XX:+EnableDynamicAgentLoading",
                "-javaagent:${configurations.mockitoAgent.asPath}",
                "-Xshare:off"
        ]
    }

}

project(':whoodle-core') {
    dependencies {
        testImplementation project(':whoodle-testdata')
    }
}

project(':whoodle-avro') {
    dependencies {
        api project(':whoodle-core')
        testImplementation project(':whoodle-testdata')
    }
}

project(':whoodle-testdata') {
    dependencies {
        api project(':whoodle-core')
    }
}

